# xNaut

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  RELEASE_NOTES_1.9.0.md  RELEASE_NOTES_1.9.1.md  generate_icons.py  justfile  package-lock.json  package.json  verify-rust-code.sh
.forgejo/: pull_request_template.md
docs/: ACL_FIX.md  BUILD_NOW.md  BUILD_ON_MACOS.md  CURRENT_STATUS.md  EXTRACT_FIRST.md  FRONTEND_README.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  INTEGRATION_GUIDE.md  QUICKSTART.md  QUICK_REFERENCE.md  README_FIRST.md  RUST_BACKEND.md  SUMMARY.md  TESTING.md  TESTING_CHECKLIST.md  TEST_INSTRUCTIONS.md  UI_OVERVIEW.md  handover.md
frontend/: loops-editor-entry.js
scripts/: chat-contracts.mjs  loop-compiler-smoke.cjs  preflight.mjs
src-tauri/: Cargo.toml  FIXES_APPLIED.md  audit.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/permissions/: default.toml
src-tauri/schemas/: loops-workflow-v1.schema.json
src-tauri/scripts/hooks/: xnaut-hook.sh
src-tauri/src/: agent_hook_setup.rs  agent_hooks.rs  agent_notes_broker.rs  agent_profiles.rs  agents.rs  ai.rs  alacritty_pty.rs  browser.rs  chat.rs  commands.rs  debug_log.rs  diff.rs  docsgen.rs  engram.rs  errors.rs  forges.rs  gitops.rs  graph.rs  loops.rs  main.rs  mcp.rs  nautloom.rs  notes.rs  plow.rs  pm.rs  project_management.rs  project_todos.rs  pty.rs  ralph.rs  sandbox.rs  sandbox_verify.rs  scaffold.rs  scheduler.rs  search.rs  settings.rs  skills.rs  ssh.rs  state.rs  status.rs  tasks.rs  (+9 more)
(+61 files in other folders)
